# claude-tauri-desktop

./: .gitignore  README.md  index.html  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
