[package]
name = "claude-tauri-desktop"
version = "0.1.0"       
description = "Claude Desktop Application with Tauri"
authors = ["0xGingi"]
edition = "2021"

[lib]
name = "claude_tauri_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "rustls-tls"] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
serde_json = "1"




